--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,9 @@ body {
   font-family: "Work Sans", sans-serif;
  
 }
-
+.song {
+  visibility: hidden;
+}
 .container {
   height: 100vh;
   width: 100vh;
